Feito implementação do automapper - Work Iten Sidney

--- a/GeekBurger.Products/GeekBurger.Products.csproj
+++ b/GeekBurger.Products/GeekBurger.Products.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GeekBurger.Products.Contract\GeekBurger.Products.Contract.csproj" />
+    <ProjectReference Include="..\GeekBurger.Service.Contract\GeekBurger.Service.Contract.csproj" />
   </ItemGroup>
 
 </Project>
