--- a/GeekBurger.Products.Contract/GeekBurger.Products.Contract.csproj
+++ b/GeekBurger.Products.Contract/GeekBurger.Products.Contract.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ProductChanged.cs" />
     <Compile Include="ProductState.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="ProductToUpsert.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
