--- a/ServiceBusTopic/ServiceBusTopic.csproj
+++ b/ServiceBusTopic/ServiceBusTopic.csproj
@@ -10,6 +10,12 @@
     <PackageReference Include="Microsoft.Azure.Management.ServiceBus.Fluent" Version="1.38.1" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.ServiceBus" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="17.5.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GeekBurger.Products\GeekBurger.Products.csproj" />
   </ItemGroup>
 
 </Project>
